test/corpus/examples/ai/features/chroma.txt
======
Chroma
======

//---------------------------------------------------------------------
// name: chroma.ck
// desc: chroma unit anlyzer, used for feature extraction of pitch data
//       e.g., a set of frequencies
//
// uncomment for Chroma API:
// Chroma.help();
//
// author: Yikai Li
//         Ge Wang (https://ccrma.stanford.edu/~ge/)
// date: Winter 2023
//---------------------------------------------------------------------

// synthesis / analysis network
SinOsc s => FFT fft =^ Chroma chroma => blackhole;

// set FFT size
2048 => fft.size;
// set window type and size
Windowing.hann(fft.size()) => fft.window;
// our hop size (how often to perform analysis)
fft.size()::samp => dur HOP;

// pitch names
["C4", "C#", "D4", "D#", "E4", "F4", "F#", "G4", "G#", "A4", "A#", "B4"] @=> string note_names[];
// test frequencies
[262, 277, 294, 311, 330, 349, 370, 392, 415, 440, 466, 494] @=> int freqs[];

// print header
cherr <= "freq ";
for (0 => int i; i < 12; i++) {
    cherr <= note_names[i] + " ";
}
cherr <= IO.newline();

// let one FFT-size of time pass (to buffer)
fft.size()::samp => now;

// extract chroma features
for( 0 => int i; i < freqs.size(); i++ )
{
    // set frequency for test
    freqs[i] => s.freq;

    //----------------------------------------------------------------
    // upchuck() computes our Chroma, automatically computing upstream
    // dependencies connected to it using =^ (e.g., FFT)
    //----------------------------------------------------------------
    chroma.upchuck();

    // print features
    cherr <= freqs[i] <= ": ";
    for( 0 => int j; j < chroma.fvals().size(); j++ )
    {
        Math.round(chroma.fval(j) * 100) => float tmp;
        cherr <= (tmp < 10 ? " ":"") <= tmp <= " ";
    }
    cherr <= IO.newline();

    // advance time
    HOP => now;
}

---

(source_file
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (statement
    (chuck_operation
      (chuck_operation
        (chuck_operation
          (variable_declaration
            (class_identifier)
            (variable_identifier))
          (chuck_operator)
          (variable_declaration
            (class_identifier)
            (variable_identifier)))
        (chuck_operator)
        (variable_declaration
          (class_identifier)
          (variable_identifier)))
      (chuck_operator)
      (keyword
        (global_unit_generator))))
  (line_comment)
  (statement
    (chuck_operation
      (int)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (function_call
        (member_identifier
          (class_identifier)
          (variable_identifier))
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier))))
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (dur
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier)))
        (duration_identifier))
      (chuck_operator)
      (variable_declaration
        (primitive_type)
        (class_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (array
        (string)
        (string)
        (string)
        (string)
        (string)
        (string)
        (string)
        (string)
        (string)
        (string)
        (string)
        (string))
      (chuck_operator)
      (variable_declaration
        (reference_type)
        (array_identifier
          (variable_identifier)))))
  (line_comment)
  (statement
    (chuck_operation
      (array
        (int)
        (int)
        (int)
        (int)
        (int)
        (int)
        (int)
        (int)
        (int)
        (int)
        (int)
        (int))
      (chuck_operator)
      (variable_declaration
        (primitive_type)
        (array_identifier
          (variable_identifier)))))
  (line_comment)
  (statement
    (binary_expression
      (keyword
        (stream_output_keywords))
      (operator)
      (string)))
  (for_loop
    (chuck_operation
      (int)
      (chuck_operator)
      (variable_declaration
        (primitive_type)
        (variable_identifier)))
    (binary_expression
      (variable_identifier)
      (operator)
      (int))
    (post_increment_expression
      (variable_identifier))
    (block
      (statement
        (binary_expression
          (binary_expression
            (keyword
              (stream_output_keywords))
            (operator)
            (array_identifier
              (variable_identifier)
              (variable_identifier)))
          (operator)
          (string)))))
  (statement
    (binary_expression
      (keyword
        (stream_output_keywords))
      (operator)
      (function_call
        (member_identifier
          (class_identifier)
          (variable_identifier)))))
  (line_comment)
  (statement
    (chuck_operation
      (dur
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier)))
        (duration_identifier))
      (chuck_operator)
      (keyword
        (special_literal_value))))
  (line_comment)
  (for_loop
    (chuck_operation
      (int)
      (chuck_operator)
      (variable_declaration
        (primitive_type)
        (variable_identifier)))
    (binary_expression
      (variable_identifier)
      (operator)
      (function_call
        (member_identifier
          (variable_identifier)
          (variable_identifier))))
    (post_increment_expression
      (variable_identifier))
    (block
      (line_comment)
      (statement
        (chuck_operation
          (array_identifier
            (variable_identifier)
            (variable_identifier))
          (chuck_operator)
          (member_identifier
            (variable_identifier)
            (variable_identifier))))
      (line_comment)
      (line_comment)
      (line_comment)
      (line_comment)
      (statement
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier))))
      (line_comment)
      (statement
        (binary_expression
          (binary_expression
            (keyword
              (stream_output_keywords))
            (operator)
            (array_identifier
              (variable_identifier)
              (variable_identifier)))
          (operator)
          (string)))
      (for_loop
        (chuck_operation
          (int)
          (chuck_operator)
          (variable_declaration
            (primitive_type)
            (variable_identifier)))
        (binary_expression
          (variable_identifier)
          (operator)
          (function_call
            (member_identifier
              (variable_identifier)
              (variable_identifier)))
          (function_call
            (variable_identifier)))
        (post_increment_expression
          (variable_identifier))
        (block
          (statement
            (chuck_operation
              (function_call
                (member_identifier
                  (class_identifier)
                  (variable_identifier))
                (binary_expression
                  (function_call
                    (member_identifier
                      (variable_identifier)
                      (variable_identifier))
                    (variable_identifier))
                  (operator)
                  (int)))
              (chuck_operator)
              (variable_declaration
                (primitive_type)
                (variable_identifier))))
          (statement
            (binary_expression
              (binary_expression
                (binary_expression
                  (keyword
                    (stream_output_keywords))
                  (operator)
                  (expression_group
                    (ternary_expression
                      (binary_expression
                        (variable_identifier)
                        (operator)
                        (int))
                      (string)
                      (string))))
                (operator)
                (variable_identifier))
              (operator)
              (string)))))
      (statement
        (binary_expression
          (keyword
            (stream_output_keywords))
          (operator)
          (function_call
            (member_identifier
              (class_identifier)
              (variable_identifier)))))
      (line_comment)
      (statement
        (chuck_operation
          (class_identifier)
          (chuck_operator)
          (keyword
            (special_literal_value)))))))
