test/corpus/examples/ai/features/mfcc-basic.txt
==========
Mfcc basic
==========

//---------------------------------------------------------------------
// name: mfcc-basic.ck
// desc: mel-frequency cepstral coefficients
//       basic MFCC feature extractor
//
// version: need chuck version 1.5.0.0 or higher
// sorting: part of ChAI (ChucK for AI)
//
// uncomment for MFCC API:
// MFCC.help();
//
// author: Ge Wang (https://ccrma.stanford.edu/~ge/)
// date: Spring 2023
//---------------------------------------------------------------------

// synthesis / analysis network
adc => FFT fft =^ MFCC mfcc => blackhole;

// set number of coefficients in MFCC (how many we get out)
// 13 is a commonly used value; using less here for printing
7 => mfcc.numCoeffs;
// set number of mel filters in MFCC
10 => mfcc.numFilters;

// set FFT size
2048 => fft.size;
// set window type and size
Windowing.hann(fft.size()) => fft.window;
// our hop size (how often to perform analysis)
fft.size()::samp => dur HOP;

// let one FFT-size of time pass (to buffer)
fft.size()::samp => now;
// control loop
while( true )
{
    //----------------------------------------------------------------
    // upchuck() computes our MFCC, automatically computing upstream
    // dependencies connected to it using =^ (e.g., FFT)
    //----------------------------------------------------------------
    mfcc.upchuck();
    // print
    cherr <= "MFCC: ";
    // print the MFCC results
    for( int i; i < mfcc.fvals().size(); i++ )
    { cherr <= mfcc.fval(i) <= " "; }
    // endline
    cherr <= IO.newline();
    // advance time
    HOP => now;
}

---

(source_file
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (statement
    (chuck_operation
      (chuck_operation
        (chuck_operation
          (keyword
            (global_unit_generator))
          (chuck_operator)
          (variable_declaration
            (class_identifier)
            (variable_identifier)))
        (chuck_operator)
        (variable_declaration
          (class_identifier)
          (variable_identifier)))
      (chuck_operator)
      (keyword
        (global_unit_generator))))
  (line_comment)
  (line_comment)
  (statement
    (chuck_operation
      (int)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (int)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (int)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (function_call
        (member_identifier
          (class_identifier)
          (variable_identifier))
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier))))
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (dur
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier)))
        (duration_identifier))
      (chuck_operator)
      (variable_declaration
        (primitive_type)
        (class_identifier))))
  (line_comment)
  (statement
    (chuck_operation
      (dur
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier)))
        (duration_identifier))
      (chuck_operator)
      (keyword
        (special_literal_value))))
  (line_comment)
  (loop
    (keyword
      (boolean_literal_value))
    (block
      (line_comment)
      (line_comment)
      (line_comment)
      (line_comment)
      (statement
        (function_call
          (member_identifier
            (variable_identifier)
            (variable_identifier))))
      (line_comment)
      (statement
        (binary_expression
          (keyword
            (stream_output_keywords))
          (operator)
          (string)))
      (line_comment)
      (for_loop
        (variable_declaration
          (primitive_type)
          (variable_identifier))
        (binary_expression
          (variable_identifier)
          (operator)
          (function_call
            (member_identifier
              (variable_identifier)
              (variable_identifier)))
          (function_call
            (variable_identifier)))
        (post_increment_expression
          (variable_identifier))
        (block
          (statement
            (binary_expression
              (binary_expression
                (keyword
                  (stream_output_keywords))
                (operator)
                (function_call
                  (member_identifier
                    (variable_identifier)
                    (variable_identifier))
                  (variable_identifier)))
              (operator)
              (string)))))
      (line_comment)
      (statement
        (binary_expression
          (keyword
            (stream_output_keywords))
          (operator)
          (function_call
            (member_identifier
              (class_identifier)
              (variable_identifier)))))
      (line_comment)
      (statement
        (chuck_operation
          (class_identifier)
          (chuck_operator)
          (keyword
            (special_literal_value)))))))
